syntax = "proto3";

package gateway;

option go_package = "gateway/";

// AuthService - service for user authentication
service AuthService {
  rpc RegisterUser (RegisterRequest) returns (RegisterResponse);
  rpc LoginUser (LoginRequest) returns (LoginResponse);
}

// Request for registration
message RegisterRequest {
  string username = 1;
  string password = 2;
}

// Response to registration
message RegisterResponse {
  bool success = 1;
  string message = 2;
}

// Request for login
message LoginRequest {
  string username = 1;
  string password = 2;
}

// Response to login
message LoginResponse {
  bool success = 1;
  string token = 2;
}